packages/ocgcore/lib/src/ocgcore_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated bindings for ocgcore (libocgcore).
///
/// Regenerate with `dart run ffigen --config ffigen.yaml`.
///
class OcgCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OcgCoreBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OcgCoreBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  void set_script_reader(script_reader f) {
    return _set_script_reader(f);
  }

  late final _set_script_readerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(script_reader)>>(
        'set_script_reader',
      );
  late final _set_script_reader = _set_script_readerPtr
      .asFunction<void Function(script_reader)>();

  void set_card_reader(card_reader f) {
    return _set_card_reader(f);
  }

  late final _set_card_readerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(card_reader)>>(
        'set_card_reader',
      );
  late final _set_card_reader = _set_card_readerPtr
      .asFunction<void Function(card_reader)>();

  void set_message_handler(message_handler f) {
    return _set_message_handler(f);
  }

  late final _set_message_handlerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(message_handler)>>(
        'set_message_handler',
      );
  late final _set_message_handler = _set_message_handlerPtr
      .asFunction<void Function(message_handler)>();

  int create_duel(int seed) {
    return _create_duel(seed);
  }

  late final _create_duelPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(uint_fast32_t)>>(
        'create_duel',
      );
  late final _create_duel = _create_duelPtr.asFunction<int Function(int)>();

  int create_duel_v2(ffi.Pointer<ffi.Uint32> seed_sequence) {
    return _create_duel_v2(seed_sequence);
  }

  late final _create_duel_v2Ptr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Uint32>)>>(
        'create_duel_v2',
      );
  late final _create_duel_v2 = _create_duel_v2Ptr
      .asFunction<int Function(ffi.Pointer<ffi.Uint32>)>();

  void start_duel(int pduel, int options) {
    return _start_duel(pduel, options);
  }

  late final _start_duelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.IntPtr, ffi.Uint32)>>(
        'start_duel',
      );
  late final _start_duel = _start_duelPtr.asFunction<void Function(int, int)>();

  void end_duel(int pduel) {
    return _end_duel(pduel);
  }

  late final _end_duelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.IntPtr)>>('end_duel');
  late final _end_duel = _end_duelPtr.asFunction<void Function(int)>();

  void set_player_info(
    int pduel,
    int playerid,
    int lp,
    int startcount,
    int drawcount,
  ) {
    return _set_player_info(pduel, playerid, lp, startcount, drawcount);
  }

  late final _set_player_infoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.IntPtr,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('set_player_info');
  late final _set_player_info = _set_player_infoPtr
      .asFunction<void Function(int, int, int, int, int)>();

  void get_log_message(int pduel, ffi.Pointer<ffi.Char> buf) {
    return _get_log_message(pduel, buf);
  }

  late final _get_log_messagePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Char>)>
      >('get_log_message');
  late final _get_log_message = _get_log_messagePtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>)>();

  int get_message(int pduel, ffi.Pointer<byte> buf) {
    return _get_message(pduel, buf);
  }

  late final _get_messagePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.IntPtr, ffi.Pointer<byte>)>
      >('get_message');
  late final _get_message = _get_messagePtr
      .asFunction<int Function(int, ffi.Pointer<byte>)>();

  int process(int pduel) {
    return _process(pduel);
  }

  late final _processPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.IntPtr)>>('process');
  late final _process = _processPtr.asFunction<int Function(int)>();

  void new_card(
    int pduel,
    int code,
    int owner,
    int playerid,
    int location,
    int sequence,
    int position,
  ) {
    return _new_card(
      pduel,
      code,
      owner,
      playerid,
      location,
      sequence,
      position,
    );
  }

  late final _new_cardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.IntPtr,
            ffi.Uint32,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
          )
        >
      >('new_card');
  late final _new_card = _new_cardPtr
      .asFunction<void Function(int, int, int, int, int, int, int)>();

  void new_tag_card(int pduel, int code, int owner, int location) {
    return _new_tag_card(pduel, code, owner, location);
  }

  late final _new_tag_cardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.IntPtr, ffi.Uint32, ffi.Uint8, ffi.Uint8)
        >
      >('new_tag_card');
  late final _new_tag_card = _new_tag_cardPtr
      .asFunction<void Function(int, int, int, int)>();

  int query_card(
    int pduel,
    int playerid,
    int location,
    int sequence,
    int query_flag,
    ffi.Pointer<byte> buf,
    int use_cache,
  ) {
    return _query_card(
      pduel,
      playerid,
      location,
      sequence,
      query_flag,
      buf,
      use_cache,
    );
  }

  late final _query_cardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.IntPtr,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Int32,
            ffi.Pointer<byte>,
            ffi.Int32,
          )
        >
      >('query_card');
  late final _query_card = _query_cardPtr
      .asFunction<
        int Function(int, int, int, int, int, ffi.Pointer<byte>, int)
      >();

  int query_field_count(int pduel, int playerid, int location) {
    return _query_field_count(pduel, playerid, location);
  }

  late final _query_field_countPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.IntPtr, ffi.Uint8, ffi.Uint8)>
      >('query_field_count');
  late final _query_field_count = _query_field_countPtr
      .asFunction<int Function(int, int, int)>();

  int query_field_card(
    int pduel,
    int playerid,
    int location,
    int query_flag,
    ffi.Pointer<byte> buf,
    int use_cache,
  ) {
    return _query_field_card(
      pduel,
      playerid,
      location,
      query_flag,
      buf,
      use_cache,
    );
  }

  late final _query_field_cardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.IntPtr,
            ffi.Uint8,
            ffi.Uint8,
            ffi.Uint32,
            ffi.Pointer<byte>,
            ffi.Int32,
          )
        >
      >('query_field_card');
  late final _query_field_card = _query_field_cardPtr
      .asFunction<int Function(int, int, int, int, ffi.Pointer<byte>, int)>();

  int query_field_info(int pduel, ffi.Pointer<byte> buf) {
    return _query_field_info(pduel, buf);
  }

  late final _query_field_infoPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.IntPtr, ffi.Pointer<byte>)>
      >('query_field_info');
  late final _query_field_info = _query_field_infoPtr
      .asFunction<int Function(int, ffi.Pointer<byte>)>();

  void set_responsei(int pduel, int value) {
    return _set_responsei(pduel, value);
  }

  late final _set_responseiPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.IntPtr, ffi.Int32)>>(
        'set_responsei',
      );
  late final _set_responsei = _set_responseiPtr
      .asFunction<void Function(int, int)>();

  void set_responseb(int pduel, ffi.Pointer<byte> buf) {
    return _set_responseb(pduel, buf);
  }

  late final _set_responsebPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.IntPtr, ffi.Pointer<byte>)>
      >('set_responseb');
  late final _set_responseb = _set_responsebPtr
      .asFunction<void Function(int, ffi.Pointer<byte>)>();

  int preload_script(int pduel, ffi.Pointer<ffi.Char> script_name) {
    return _preload_script(pduel, script_name);
  }

  late final _preload_scriptPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.IntPtr, ffi.Pointer<ffi.Char>)
        >
      >('preload_script');
  late final _preload_script = _preload_scriptPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<byte> default_script_reader(
    ffi.Pointer<ffi.Char> script_name,
    ffi.Pointer<ffi.Int> len,
  ) {
    return _default_script_reader(script_name, len);
  }

  late final _default_script_readerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<byte> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('default_script_reader');
  late final _default_script_reader = _default_script_readerPtr
      .asFunction<
        ffi.Pointer<byte> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Int>)
      >();
}

typedef byte = ffi.UnsignedChar;
typedef Dartbyte = int;

final class card_data extends ffi.Struct {
  @ffi.Uint32()
  external int code;

  @ffi.Uint32()
  external int alias;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint16> setcode;

  @ffi.Uint32()
  external int type;

  @ffi.Uint32()
  external int level;

  @ffi.Uint32()
  external int attribute;

  @ffi.Uint32()
  external int race;

  @ffi.Int32()
  external int attack;

  @ffi.Int32()
  external int defense;

  @ffi.Uint32()
  external int lscale;

  @ffi.Uint32()
  external int rscale;

  @ffi.Uint32()
  external int link_marker;

  @ffi.Uint32()
  external int rule_code;
}

typedef script_readerFunction =
    ffi.Pointer<byte> Function(
      ffi.Pointer<ffi.Char> script_name,
      ffi.Pointer<ffi.Int> len,
    );
typedef script_reader = ffi.Pointer<ffi.NativeFunction<script_readerFunction>>;
typedef card_readerFunction =
    ffi.Uint32 Function(ffi.Uint32 code, ffi.Pointer<card_data> data);
typedef Dartcard_readerFunction =
    int Function(int code, ffi.Pointer<card_data> data);
typedef card_reader = ffi.Pointer<ffi.NativeFunction<card_readerFunction>>;
typedef message_handlerFunction =
    ffi.Uint32 Function(ffi.IntPtr pduel, ffi.Uint32 msg_type);
typedef Dartmessage_handlerFunction = int Function(int pduel, int msg_type);
typedef message_handler =
    ffi.Pointer<ffi.NativeFunction<message_handlerFunction>>;
typedef uint_fast32_t = ffi.Uint32;
typedef Dartuint_fast32_t = int;
